--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -4,6 +4,6 @@ div {
     background-color: red;
     color: white;
     text-align: center; 
-    font-size: 32pt;
+    font-size: 32px;
     font-weight: bold;
 }
